--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -67,8 +67,11 @@ signup.form.password=Password
 signup.form.description=A bit about yourself
 signup.form.country=Country
 signup.form.phoneNumber=Phone Number
+signup.form.credit.card.number=Credit Card Number
+signup.form.cvv.number=Security Code On Card (CVV)
+signup.form.card.expiration=Card Expiration
 signup.form.error.username.already.exists=Username (already taken)
 signup.form.error.email.already.exists=Email (already taken)
-signup.form.profile.image.url=You can upload your profile image
 signup.profile.created.success=Thank You. Your profile has been created.
 signup.profile.created.error=An error has occurred while creating your profile
+signup.form.profile.image.url=You can upload your profile image
