Added generic error page and exception handling to S3 and Stripe services

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -75,3 +75,11 @@ signup.form.error.email.already.exists=Email (already taken)
 signup.profile.created.success=Thank You. Your profile has been created.
 signup.profile.created.error=An error has occurred while creating your profile
 signup.form.profile.image.url=You can upload your profile image
+
+# Errors section
+error.generic.title=Uh-oh! Something Happened!
+error.generic.page=Page:
+error.generic.ocurred=Ocurred:
+error.generic.click=Devopsbuddy has encountered an error. Please contact support:
+error.generic.here=Click here
+error.generic.ask=Support may ask you to right click to view page source.
