Cleanup unnecessary coments

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -80,6 +80,6 @@ signup.form.profile.image.url=You can upload your profile image
 error.generic.title=Uh-oh! Something Happened!
 error.generic.page=Page:
 error.generic.ocurred=Ocurred:
-error.generic.click=Devopsbuddy has encountered an error. Please contact support:
-error.generic.here=Click here
+error.generic.click=Devopsbuddy has encountered an error. Please contact support
+error.generic.here= here
 error.generic.ask=Support may ask you to right click to view page source.
